@@ -4,6 +4,10 @@
 	the lowlevel write_buf() method, this allows implementing zero
 	copy writes.
 
+	* Add a new read_buf() method to the highlevel API.  This allows
+	returning a generic buffer from the read method, which in turn
+	allows zero copy reads.
+
 2010-11-08  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix check for read-only fs in mtab update
